DotNet-GraphQL-Rest-APIs/k8s/sw-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sw-restapi
spec:
  selector:
    matchLabels:
      app: sw-restapi
  template:
    metadata:
      labels:
        app: sw-restapi
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
    spec:
      nodeSelector:
        pooltype: apps
        kubernetes.io/os: linux
      tolerations:
        - key: 'kubernetes.azure.com/scalesetpriority'
          operator: 'Equal'
          value: 'spot'
          effect: 'NoSchedule'
      containers:
        - name: sw-restapi
          image: ghcr.io/goncalvesj/sw-rest:11457269474
          imagePullPolicy: Always
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: sw-restapi
spec:
  selector:
    app: sw-restapi
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 80
