DotNet-GraphQL-Rest-APIs/k8s/istio-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sw-restapi-internal
spec:
  parentRefs:
    - name: gateway-internal
      namespace: aks-istio-ingress
  hostnames: ["sw-api.aks.rocks"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sw-restapi
          port: 8083
# For Istio External Gateway ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: sw-restapi-external
#   namespace: default
# spec:
#   parentRefs:
#     - name: gateway-external
#       namespace: aks-istio-ingress
#   hostnames: ["sw-api.aks.rocks"]
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: sw-restapi
#           port: 8083
